# cis_class

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
cis/: app.py  arxivapp.py  train_bert.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: metrics.txt  pytorch_model.pt
models/distilbert-base-cased/: pytorch_model.pt
notebooks/: test.ipynb
