[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cis"
version = "0.0.1"
description = "Service about classification cis."
authors = [
  { name = "Anufriev N" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["cis"]
include = ["pyproject.toml", "cis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cis"]
force-sort-within-sections = true

