[project]
name = "cis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.1.1",
    "opencv-python>=4.11.0.86",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pycocotools>=2.0.8",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.50.3",
    "ultralytics>=8.3.103",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
